@@ -53,7 +53,12 @@ Domain
 ------
 
 The window action could have a list of domains which could be activated on the
-view.
+view. The boolean field count indicates if the client must display the number
+of records for this domain.
+
+.. warning::
+    The counting option must be activated only on domains which have not too
+    much records otherwise it may overload the database.
 
 Wizard
 ======
